Fix filter count display, comment button size, and edit/delete alignment

--- a/src/app/components/annotation-tools/note-panel/note-panel.component.scss
+++ b/src/app/components/annotation-tools/note-panel/note-panel.component.scss
@@ -1,5 +1,10 @@
 @import "../../../../assets/scss/config.scss";
 
+// Hidden utility class
+.hidden {
+  display: none !important;
+}
+
 // Animations
 @keyframes fadeIn {
   from {
